# launch-gatekeeper

./: MANIFEST.txt  README.md  pyproject.toml  streamlit_app.py
demo/sample_outputs/: launch_case_01_output.json
docs/: abstention-policy.md  blocker-policy.md  critique-and-fixes.md  demo-script.md  portfolio-presentation-notes.md  readiness-model.md  risk-taxonomy.md
eval/goldens/: launch_cases.jsonl
eval/rubrics/: abstention.md  risk_quality.md
examples/: launch_case_01.json  launch_case_02.json  launch_case_03.json  launch_case_04.json
schemas/: launch_input.schema.json  readiness_output.schema.json
src/launch_gatekeeper/: __init__.py  cli.py  eval_runner.py  logic.py  pipeline.py  utils.py  validator.py
tests/: test_review.py
